# ai-ecosystem-workspace

./: .gitignore  README.md  compose.yml  init.sql  main.py  pyproject.toml
backend/core/: config.py  logger.py
backend/core/db/: models.py  session.py  test_students.py
backend/utils/: enqueue_job.py  labelstudio_client.py  list_projects.py  list_tasks.py  minio_client.py  worker_settings.py
diagrams/: overview.dio
sandbox/: test_settings.py
sandbox/minio/: download.py  enable_versioning.py  list_versions.py  upload.py
