[project]
name = "ai-ecosystem-workspace"
version = "0.1.0"
description = "build a ecosysrtem for AI development"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arq>=0.28.0",
    "label-studio-sdk>=2.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
